src/tests/cases/snapshots/bandwhich__tests__cases__ui__layout-under-70-width-under-30-height-draw_events.snap
---
source: src/tests/cases/ui.rs
expression: terminal_draw_events.lock().unwrap().join(SNAPSHOT_SECTION_SEPARATOR)
---
IF: interface_name | Total Rate (Up / Down): 0.00B / 0.00B           
âUtilization by process nameâââââââââââââââââââââââââââââââââââââââââ
âProcess                        Connections    Rate (Up / Down)     â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
â                                                                   â
âââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââ
 Press <SPACE> to pause. Use <TAB> to rearrange tables.              

--- SECTION SEPARATOR ---
                                                     98. 0B          
                                                                     
                                                                     
 5                              1              0.00B / 28.00B        
 4                              1              0.00B / 26.00B        
 1                              1              0.00B / 22.00B        
 2                              1              0.00B / 21.00B
